# webuntis-public

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/webuntis_public/: __init__.py  client.py  models.py  parsing.py  semester.py
tests/: test_client.py  test_parsing.py  test_semester.py
