[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webuntis-public"
version = "0.2.0"
description = "Python client for the WebUntis public timetable REST API (no authentication required)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "mklemmingen" }]
keywords = ["webuntis", "timetable", "schedule", "university", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/mklemmingen/webuntis-public"
Repository = "https://github.com/mklemmingen/webuntis-public"
Issues = "https://github.com/mklemmingen/webuntis-public/issues"

[tool.setuptools.packages.find]
where = ["src"]
